--- a/To_do_list_Mobile/src/app/login/login.page.html
+++ b/To_do_list_Mobile/src/app/login/login.page.html
@@ -1,13 +1,60 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding form-content">
+  <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+    <ion-item class="input-item">
+      <ion-label position="floating">Username</ion-label>
+      <ion-icon name="at-outline" slot="start"></ion-icon>
+      <ion-input
+        type="text"
+        required
+        [(ngModel)]="username"
+        name="username"
+      ></ion-input>
+    </ion-item>
+
+    <ion-item class="input-item">
+      <ion-label position="floating">Senha</ion-label>
+      <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+      <ion-input
+        type="password"
+        required
+        [(ngModel)]="password"
+        name="password"
+      ></ion-input>
+    </ion-item>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button
+            expand="block"
+            color="success"
+            type="submit"
+            [disabled]="!loginForm.valid"
+          >
+            <ion-icon slot="start" name="log-in-outline"></ion-icon>
+            Entrar
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button
+            expand="block"
+            fill="outline"
+            color="dark"
+            (click)="goToRegister()"
+          >
+            <ion-icon slot="start" name="arrow-forward-outline"></ion-icon>
+            Criar Conta
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
