--- a/To_do_list_Mobile/src/app/home/home.page.scss
+++ b/To_do_list_Mobile/src/app/home/home.page.scss
@@ -26,4 +26,72 @@
   text-decoration: none;
 }
 
+.task-item {
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
 
+  ion-label {
+    display: block;
+  }
+
+  .task-title {
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 8px;
+  }
+
+  .task-description {
+    font-size: 1.1rem;
+    color: #666;
+    margin-bottom: 12px;
+  }
+
+  .task-info {
+    font-size: 1rem;
+    color: #888;
+    margin-bottom: 6px;
+    strong {
+      color: #444;
+    }
+  }
+
+  .status-todo {
+    color: #ff9800; 
+  }
+  .custom-alert {
+    --background: #ffffff;
+    --border-radius: 10px; 
+    --box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); 
+  }
+  
+  .alert-input, .alert-textarea {
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    padding: 10px; 
+    margin-bottom: 15px; 
+    transition: border 0.3s; 
+  }
+  
+  .alert-input:focus, .alert-textarea:focus {
+    border-color: #007bff; 
+  }
+  
+  .alert-button-cancel {
+    background-color: #f44336; 
+    color: #fff; 
+  }
+  
+  .alert-button-add {
+    background-color: #4CAF50; 
+    color: #fff; 
+  }
+  
+  .alert-button-add:hover {
+    background-color: #45a049; 
+  }
+  
